@@ -1,0 +1,2 @@
+setenv bootargs 'console=tty0 console=ttyS0,115200n8 root=UUID=159143a2-06d9-4e67-92a6-7fd01d938019 rootwait CMA=64M tegrapart=recovery:300:a00:800,boot:d00:1000:800,mbr:1d00:200:800'
+bootz @KERNEL @INITRD @FDT
