@@ -1,3 +1,9 @@
+create_image (0.1-2) unstable; urgency=low
+
+  * add example script for AC100
+
+ -- Marc Dietrich <marvin24@gmx.de>  Sat, 5 Jan 2013 17:51:30 +0200
+
 create_image (0.1-1) unstable; urgency=low
 
   * Initial release
